# Digital-Wellbeing-for-Linux

./: .SRCINFO  .gitignore  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  pyproject.toml  setup.py  zenscreen.install
data/: zenscreen-autostart.desktop  zenscreen.desktop
systemd/: zenscreen.service
tests/: __init__.py  test_database.py
zenscreen/: __init__.py  __main__.py
zenscreen/cli/: __init__.py  main.py
zenscreen/core/: __init__.py  database.py  focus.py  stats.py  tracker.py
zenscreen/daemon/: __init__.py  service.py
zenscreen/gui/: __init__.py  main.py
