[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenscreen"
version = "1.0.1"
description = "A Digital Wellbeing & Screen Time Tracker for Linux"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "someshwar", email = "someshwar@example.com"}
]
keywords = ["screen-time", "digital-wellbeing", "productivity", "focus", "linux", "gtk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: Gnome",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pycairo>=1.20.0",
    "PyGObject>=3.42.0",
    "pynput>=1.7.6",
    "python-xlib>=0.33",
    "dbus-python>=1.3.2",
    "matplotlib>=3.7.0",
    "appdirs>=1.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/someshwar/zenscreen"
Documentation = "https://github.com/someshwar/zenscreen#readme"
Repository = "https://github.com/someshwar/zenscreen.git"
Issues = "https://github.com/someshwar/zenscreen/issues"

[project.scripts]
zenscreen = "zenscreen.cli.main:cli"
zenscreen-daemon = "zenscreen.daemon.service:main"

[project.gui-scripts]
zenscreen-gtk = "zenscreen.gui.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zenscreen*"]

[tool.setuptools.package-data]
zenscreen = ["../data/*", "../data/icons/*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
